@@ -466,6 +466,21 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|width
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|collect
 specifier|public
 name|void
@@ -999,6 +1014,27 @@ else|:
 name|maxEndPositionCell
 operator|.
 name|endPosition
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+return|return
+name|maxEndPositionCell
+operator|.
+name|startPosition
+argument_list|()
+operator|-
+name|minPositionCell
+argument_list|()
+operator|.
+name|startPosition
 argument_list|()
 return|;
 block|}
