@@ -1767,6 +1767,20 @@ block|}
 annotation|@
 name|Override
 specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+return|return
+name|topPositionSpans
+operator|.
+name|width
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
 name|void
 name|collect
 parameter_list|(
