@@ -174,6 +174,22 @@ throw|;
 block|}
 annotation|@
 name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+name|UNSUPPORTED_MSG
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
 DECL|method|collect
 specifier|public
 name|void
@@ -373,6 +389,22 @@ DECL|method|endPosition
 specifier|public
 name|int
 name|endPosition
+parameter_list|()
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+name|UNSUPPORTED_MSG
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
 parameter_list|()
 block|{
 throw|throw
