@@ -443,19 +443,19 @@ operator|new
 name|float
 index|[]
 block|{
-literal|0.625f
+literal|0.8838834f
 block|,
-literal|0.45927936f
+literal|0.64951903f
 block|,
-literal|0.35355338f
+literal|0.5f
 block|,
-literal|0.35355338f
+literal|0.5f
 block|,
-literal|0.35355338f
+literal|0.5f
 block|,
-literal|0.35355338f
+literal|0.5f
 block|,
-literal|0.26516503f
+literal|0.375f
 block|,}
 decl_stmt|;
 name|assertHits
@@ -576,9 +576,9 @@ operator|new
 name|float
 index|[]
 block|{
-literal|1.0191123f
+literal|1.44124233f
 block|,
-literal|0.93163157f
+literal|1.31752586f
 block|}
 decl_stmt|;
 name|assertHits
@@ -613,7 +613,7 @@ name|doTestBooleanQueryWithSpanQueries
 argument_list|(
 name|searcher2
 argument_list|,
-literal|0.73500174f
+literal|1.0394494f
 argument_list|)
 expr_stmt|;
 block|}
