@@ -405,6 +405,39 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|width
+specifier|public
+name|int
+name|width
+parameter_list|()
+block|{
+assert|assert
+name|state
+operator|==
+name|State
+operator|.
+name|ITERATING
+assert|;
+specifier|final
+name|int
+name|distance
+init|=
+name|in
+operator|.
+name|width
+argument_list|()
+decl_stmt|;
+assert|assert
+name|distance
+operator|>=
+literal|0
+assert|;
+return|return
+name|distance
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|collect
 specifier|public
 name|void
